# HelloTriangle

./: .gitignore  CMakeLists.txt  README.md  valOutput.sh
include/: requirements
src/: MACROS.hpp  main.cpp  window.cpp
src/MACROS/: MACROS.hpp
src/engine/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  gameClock.cpp  gameClock.hpp
src/engine/shader/: shader.cpp  shader.h  shader.hpp
src/engine/shaders/: vertexShader.h
src/old/: window.hpp
